Honor the ButtonLayout setting in the interaction dialogs. Button layout codes provided by Francois Marier.

BUG: 147799

svn path=/branches/extragear/kde3/multimedia/k3b/; revision=690257